cmake_minimum_required(VERSION 3.11)
project (study-duktape)

SET(SOURCE_DIR ${CMAKE_SOURCE_DIR}/src)

SET(DUKTAPE_SOURCE_VERSION 2.7.0)
SET(DUKTAPE_SOURCE_TARBAL ${CMAKE_SOURCE_DIR}/lib/duktape-${DUKTAPE_SOURCE_VERSION}.tar.xz) 
SET(DUKTAPE_SOURCE_DIR src)
SET(DUKTAPE_SOURCE_MAIN_CODE duktape.c)
SET(DUKTAPE_V1_COMPAT_SOURCE_DIR extras/duk-v1-compat)
SET(DUKTAPE_V1_COMPAT_SOURCE_MAIN_CODE duk_v1_compat.c)
SET(DUKTAPE_WORKING_DIR ${CMAKE_CURRENT_BINARY_DIR}/duktape-${DUKTAPE_SOURCE_VERSION})

SET(CURL_SOURCE_VERSION 7.83.1)
SET(CURL_SOURCE_TARBAL ${CMAKE_SOURCE_DIR}/lib/curl-${CURL_SOURCE_VERSION}.tar.gz) 
SET(CURL_SOURCE_DIR curl-${CURL_SOURCE_VERSION})
SET(CURL_WORKING_DIR ${CMAKE_CURRENT_BINARY_DIR}/${CURL_SOURCE_DIR})

SET(LIBSSH2_SOURCE_VERSION 1.10.0)
SET(LIBSSH2_SOURCE_TARBAL ${CMAKE_SOURCE_DIR}/lib/libssh2-${LIBSSH2_SOURCE_VERSION}.tar.gz) 
SET(LIBSSH2_SOURCE_DIR libssh2-${LIBSSH2_SOURCE_VERSION})
SET(LIBSSH2_WORKING_DIR ${CMAKE_CURRENT_BINARY_DIR}/${LIBSSH2_SOURCE_DIR})

INCLUDE_DIRECTORIES(${SOURCE_DIR})
INCLUDE_DIRECTORIES(${DUKTAPE_WORKING_DIR})
INCLUDE_DIRECTORIES(${DUKTAPE_WORKING_DIR}/${DUKTAPE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${DUKTAPE_WORKING_DIR}/${DUKTAPE_V1_COMPAT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${LIBSSH2_WORKING_DIR})

ADD_CUSTOM_COMMAND(
	OUTPUT PREPARE_LIBSSH2_SOURCE
	COMMAND test -e ${LIBSSH2_WORKING_DIR} || tar -xvf ${LIBSSH2_SOURCE_TARBAL}
	COMMAND test -e ${LIBSSH2_WORKING_DIR} || exit 1
)

#ADD_CUSTOM_COMMAND(
#	OUTPUT PREPARE_CURL_SOURCE
#	COMMAND test -e ${CURL_WORKING_DIR} || tar -xvf ${CURL_SOURCE_TARBAL}
#	COMMAND test -e ${CURL_WORKING_DIR} || exit 1
#)

ADD_CUSTOM_COMMAND(
	OUTPUT PREPARE_DUKTAPE_SOURCE
	COMMAND test -e ${DUKTAPE_WORKING_DIR} || tar -xvf ${DUKTAPE_SOURCE_TARBAL}
	COMMAND test -e ${DUKTAPE_WORKING_DIR} || exit 1
)

#add_subdirectory(${LIBSSH2_WORKING_DIR})
#add_subdirectory(${CURL_WORKING_DIR})

SET_SOURCE_FILES_PROPERTIES(
	${DUKTAPE_WORKING_DIR}/${DUKTAPE_SOURCE_DIR}/${DUKTAPE_SOURCE_MAIN_CODE}
	PROPERTIES GENERATED TRUE
)
SET_SOURCE_FILES_PROPERTIES(
	${DUKTAPE_WORKING_DIR}/${DUKTAPE_V1_COMPAT_SOURCE_DIR}/${DUKTAPE_V1_COMPAT_SOURCE_MAIN_CODE}
	PROPERTIES GENERATED TRUE
)

ADD_CUSTOM_TARGET(prepare ALL DEPENDS PREPARE_DUKTAPE_SOURCE)

ADD_LIBRARY(duktape
	${DUKTAPE_WORKING_DIR}/${DUKTAPE_SOURCE_DIR}/${DUKTAPE_SOURCE_MAIN_CODE}
	${DUKTAPE_WORKING_DIR}/${DUKTAPE_V1_COMPAT_SOURCE_DIR}/${DUKTAPE_V1_COMPAT_SOURCE_MAIN_CODE}
)
ADD_DEPENDENCIES(duktape prepare)

ADD_EXECUTABLE(test-js-engine
	${SOURCE_DIR}/test_js_engine.c
	${SOURCE_DIR}/my_js_helper_print.c
)
TARGET_LINK_LIBRARIES(test-js-engine m duktape)

ADD_EXECUTABLE(test-js-fetch-url-helper
	${SOURCE_DIR}/test_js_fetch_url_helper.c
	${SOURCE_DIR}/my_js_helper_print.c
	${SOURCE_DIR}/my_js_helper_fetch_url.c
)
TARGET_LINK_LIBRARIES(test-js-fetch-url-helper m duktape curl)

