cmake_minimum_required(VERSION 3.11)
project (study-duktape)

SET(SOURCE_DIR ${CMAKE_SOURCE_DIR}/src)

SET(DUKTAPE_V1_SOURCE_VERSION 1.8.0)
SET(DUKTAPE_V1_SOURCE_TARBAL ${CMAKE_SOURCE_DIR}/lib/duktape-${DUKTAPE_V1_SOURCE_VERSION}.tar.xz) 
SET(DUKTAPE_V1_SOURCE_DIR src)
SET(DUKTAPE_V1_SOURCE_MAIN_CODE duktape.c)
SET(DUKTAPE_V1_WORKING_DIR ${CMAKE_CURRENT_BINARY_DIR}/duktape-${DUKTAPE_V1_SOURCE_VERSION})

SET(DUKTAPE_V2_SOURCE_VERSION 2.7.0)
SET(DUKTAPE_V2_SOURCE_TARBAL ${CMAKE_SOURCE_DIR}/lib/duktape-${DUKTAPE_V2_SOURCE_VERSION}.tar.xz) 
SET(DUKTAPE_V2_SOURCE_DIR src)
SET(DUKTAPE_V2_SOURCE_MAIN_CODE duktape.c)
SET(DUKTAPE_V2_V1_COMPAT_SOURCE_DIR extras/duk-v1-compat)
SET(DUKTAPE_V2_V1_COMPAT_SOURCE_MAIN_CODE duk_v1_compat.c)
SET(DUKTAPE_V2_CONSOLE_SOURCE_DIR extras/console)
SET(DUKTAPE_V2_CONSOLE_SOURCE_MAIN_CODE duk_console.c)
SET(DUKTAPE_V2_WORKING_DIR ${CMAKE_CURRENT_BINARY_DIR}/duktape-${DUKTAPE_V2_SOURCE_VERSION})

SET(CURL_SOURCE_VERSION 7.83.1)
SET(CURL_SOURCE_TARBAL ${CMAKE_SOURCE_DIR}/lib/curl-${CURL_SOURCE_VERSION}.tar.gz) 
SET(CURL_SOURCE_DIR curl-${CURL_SOURCE_VERSION})
SET(CURL_WORKING_DIR ${CMAKE_CURRENT_BINARY_DIR}/${CURL_SOURCE_DIR})

SET(LIBSSH2_SOURCE_VERSION 1.10.0)
SET(LIBSSH2_SOURCE_TARBAL ${CMAKE_SOURCE_DIR}/lib/libssh2-${LIBSSH2_SOURCE_VERSION}.tar.gz) 
SET(LIBSSH2_SOURCE_DIR libssh2-${LIBSSH2_SOURCE_VERSION})
SET(LIBSSH2_WORKING_DIR ${CMAKE_CURRENT_BINARY_DIR}/${LIBSSH2_SOURCE_DIR})

INCLUDE_DIRECTORIES(${SOURCE_DIR})
#INCLUDE_DIRECTORIES(${DUKTAPE_V2_WORKING_DIR})
#INCLUDE_DIRECTORIES(${DUKTAPE_V2_WORKING_DIR}/${DUKTAPE_V2_SOURCE_DIR})
#INCLUDE_DIRECTORIES(${DUKTAPE_V2_WORKING_DIR}/${DUKTAPE_V2_V1_COMPAT_SOURCE_DIR})
#INCLUDE_DIRECTORIES(${LIBSSH2_WORKING_DIR})

ADD_CUSTOM_COMMAND(
	OUTPUT PREPARE_LIBSSH2_SOURCE
	COMMAND test -e ${LIBSSH2_WORKING_DIR} || tar -xvf ${LIBSSH2_SOURCE_TARBAL}
	COMMAND test -e ${LIBSSH2_WORKING_DIR} || exit 1
)

#ADD_CUSTOM_COMMAND(
#	OUTPUT PREPARE_CURL_SOURCE
#	COMMAND test -e ${CURL_WORKING_DIR} || tar -xvf ${CURL_SOURCE_TARBAL}
#	COMMAND test -e ${CURL_WORKING_DIR} || exit 1
#)

ADD_CUSTOM_COMMAND(
	OUTPUT PREPARE_DUKTAPE_V2_SOURCE
	COMMAND test -e ${DUKTAPE_V2_WORKING_DIR} || tar -xvf ${DUKTAPE_V2_SOURCE_TARBAL}
	COMMAND test -e ${DUKTAPE_V2_WORKING_DIR} || exit 1
)

ADD_CUSTOM_COMMAND(
	OUTPUT PREPARE_DUKTAPE_V1_SOURCE
	COMMAND test -e ${DUKTAPE_V1_WORKING_DIR} || tar -xvf ${DUKTAPE_V1_SOURCE_TARBAL}
	COMMAND test -e ${DUKTAPE_V1_WORKING_DIR} || exit 1
)

#add_subdirectory(${LIBSSH2_WORKING_DIR})
#add_subdirectory(${CURL_WORKING_DIR})

SET_SOURCE_FILES_PROPERTIES(
	${DUKTAPE_V2_WORKING_DIR}/${DUKTAPE_V2_SOURCE_DIR}/${DUKTAPE_V2_SOURCE_MAIN_CODE}
	PROPERTIES GENERATED TRUE
)
SET_SOURCE_FILES_PROPERTIES(
	${DUKTAPE_V2_WORKING_DIR}/${DUKTAPE_V2_V1_COMPAT_SOURCE_DIR}/${DUKTAPE_V2_V1_COMPAT_SOURCE_MAIN_CODE}
	PROPERTIES GENERATED TRUE
)
SET_SOURCE_FILES_PROPERTIES(
    ${DUKTAPE_V2_WORKING_DIR}/${DUKTAPE_V2_CONSOLE_SOURCE_DIR}/${DUKTAPE_V2_CONSOLE_SOURCE_MAIN_CODE}
	PROPERTIES GENERATED TRUE
)
SET_SOURCE_FILES_PROPERTIES(
	${DUKTAPE_V1_WORKING_DIR}/${DUKTAPE_V1_SOURCE_DIR}/${DUKTAPE_V1_SOURCE_MAIN_CODE}
	PROPERTIES GENERATED TRUE
)
ADD_CUSTOM_TARGET(prepare ALL DEPENDS PREPARE_DUKTAPE_V2_SOURCE PREPARE_DUKTAPE_V1_SOURCE)

ADD_LIBRARY(duktape_v2
	${DUKTAPE_V2_WORKING_DIR}/${DUKTAPE_V2_SOURCE_DIR}/${DUKTAPE_V2_SOURCE_MAIN_CODE}
)
TARGET_INCLUDE_DIRECTORIES(duktape_v2 PUBLIC
    ${DUKTAPE_V2_WORKING_DIR}/${DUKTAPE_V2_SOURCE_DIR}
)
ADD_DEPENDENCIES(duktape_v2 prepare)

ADD_LIBRARY(duktape_v2_extra
	${DUKTAPE_V2_WORKING_DIR}/${DUKTAPE_V2_V1_COMPAT_SOURCE_DIR}/${DUKTAPE_V2_V1_COMPAT_SOURCE_MAIN_CODE}
    ${DUKTAPE_V2_WORKING_DIR}/${DUKTAPE_V2_CONSOLE_SOURCE_DIR}/${DUKTAPE_V2_CONSOLE_SOURCE_MAIN_CODE}
)
TARGET_INCLUDE_DIRECTORIES(duktape_v2_extra PUBLIC
    ${DUKTAPE_V2_WORKING_DIR}/${DUKTAPE_V2_SOURCE_DIR}
    ${DUKTAPE_V2_WORKING_DIR}/${DUKTAPE_V2_V1_COMPAT_SOURCE_DIR}
    ${DUKTAPE_V2_WORKING_DIR}/${DUKTAPE_V2_CONSOLE_SOURCE_DIR}
)
ADD_DEPENDENCIES(duktape_v2_extra prepare)

ADD_LIBRARY(duktape_v1
	${DUKTAPE_V1_WORKING_DIR}/${DUKTAPE_V1_SOURCE_DIR}/${DUKTAPE_V1_SOURCE_MAIN_CODE}
)
ADD_DEPENDENCIES(duktape_v1 prepare)
TARGET_INCLUDE_DIRECTORIES(duktape_v1 PUBLIC
    ${DUKTAPE_V1_WORKING_DIR}/${DUKTAPE_V1_SOURCE_DIR}
)

ADD_EXECUTABLE(test-js-engine-v2
	${SOURCE_DIR}/test_js_engine.c
	${SOURCE_DIR}/my_js_helper_print.c
)
TARGET_LINK_LIBRARIES(test-js-engine-v2 m duktape_v2 duktape_v2_extra)

ADD_EXECUTABLE(test-js-fetch-url-helper-v2
	${SOURCE_DIR}/test_js_fetch_url_helper.c
	${SOURCE_DIR}/my_js_helper_print.c
	${SOURCE_DIR}/my_js_helper_fetch_url.c
)
TARGET_LINK_LIBRARIES(test-js-fetch-url-helper-v2 m duktape_v2 duktape_v2_extra curl)

ADD_EXECUTABLE(test-js-engine-v1
	${SOURCE_DIR}/test_js_engine.c
	${SOURCE_DIR}/my_js_helper_print.c
)
TARGET_LINK_LIBRARIES(test-js-engine-v1 duktape_v1)

ADD_EXECUTABLE(test-js-fetch-url-helper-v1
	${SOURCE_DIR}/test_js_fetch_url_helper.c
	${SOURCE_DIR}/my_js_helper_print.c
	${SOURCE_DIR}/my_js_helper_fetch_url.c
)
TARGET_LINK_LIBRARIES(test-js-fetch-url-helper-v1 m duktape_v1 curl)

